# axum_login_example

./: .gitignore  Cargo.toml  README.md  admin.html  index.html  login_success.html  signup.html  upload.html
src/: lib.rs  main.rs  schema.rs
src/model/: auth.rs  upload.rs
src/router/: auth.rs  mod.rs  pages.rs  upload.rs
