[package]
name = "axum_login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
axum = { version= "0.7.5", features = ["ws"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
serde_json = "1.0.116"
opencv = "0.91.2"